crates/vexor-compiler/tests/golden/error/input/unknown_operator.vx
-- invalid operator ^
val x = 10 ^ 3
export Circle(x)
